--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://jettdlee.github.io/",
-  "name": "jettdlee.github.io",
+  "homepage": "https://jettdlee.github.io/jtl/",
+  "name": "jtl",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,12 +21,12 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
